# otus_homework_8

./: CMakeLists.txt  README.md  applyClang.bat
.github/workflows/: release.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt  test.cpp
